--- a/TestingPDF/GreenSheetCreator.csproj
+++ b/TestingPDF/GreenSheetCreator.csproj
@@ -4,9 +4,24 @@
     <AzureFunctionsVersion>v4</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Fonts\arial.ttf" />
+    <None Remove="Fonts\arialbd.ttf" />
+    <None Remove="Fonts\arialbi.ttf" />
+    <None Remove="Fonts\ariali.ttf" />
+    <None Remove="Fonts\ARIALN.TTF" />
+    <None Remove="Fonts\ARIALNB.TTF" />
+    <None Remove="Fonts\ARIALNBI.TTF" />
+    <None Remove="Fonts\ARIALNI.TTF" />
+    <None Remove="Fonts\ariblk.ttf" />
     <None Remove="Fonts\fre3of9x.ttf" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Fonts\Arial.ttf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Fonts\arialbd.ttf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
     <EmbeddedResource Include="Fonts\fre3of9x.ttf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
