--- a/TestingPDF/GreenSheetCreator.csproj
+++ b/TestingPDF/GreenSheetCreator.csproj
@@ -29,6 +29,7 @@
   <ItemGroup>
     <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.4.0" />
     <PackageReference Include="Azure.Storage.Blobs.Batch" Version="12.11.0" />
+    <PackageReference Include="Microsoft.Azure.Storage.Blob" Version="11.2.3" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.OpenApi" Version="1.0.0" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.1.1" />
     <PackageReference Include="PDFsharpNetStandard2" Version="1.51.4845" />
