--- a/TestingPDF/GreenSheetCreator.csproj
+++ b/TestingPDF/GreenSheetCreator.csproj
@@ -14,6 +14,7 @@
     <None Remove="Fonts\ARIALNI.TTF" />
     <None Remove="Fonts\ariblk.ttf" />
     <None Remove="Fonts\fre3of9x.ttf" />
+    <None Remove="Logo\NBCLogo.png" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Fonts\Arial.ttf">
@@ -23,6 +24,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="Fonts\fre3of9x.ttf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Logo\NBCLogo.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
